# rl-agent-for-qubit-array-tuning

./: .gitignore  CLUSTER_SLURM_SETUP.md  CONTAINER_IMPORT_GUIDE.md  DOCKER_CLUSTER_SETUP.md  Dockerfile  QUICK_START.md  README.md  arc.slurm  aws_script.sh  build_and_push_docker.sh  cluster.sh  cluster_with_auth.sh  env.slurm  env_arc.slurm  env_debug.slurm  import_container.sh  import_container_cluster.sh  nvidia.slurm  plot_metrics.py  pyproject.toml  requirements.txt  setup_cluster_auth.sh  setup_gitlab_token.sh  test_env.sh
DreamerV3/: IMPLEMENTATION_SUMMARY.md  QDARTS_ENVIRONMENT_README.md  README_inference.md  create_gif.py  example_fig.py  inference.py  qarray_config.yaml  qarray_env.py  qarray_env_rnd.py  qarray_wrapper.py  qdarts_2dot_sensor_v2.py  qdarts_config.yaml  qdarts_config_loader.py  qdarts_config_loader_v4.py  qdarts_config_loader_v5.py  qdarts_config_v4.yaml  qdarts_config_v5.yaml  qdarts_env.py  qdarts_env_config.yaml  qdarts_env_plan.md  qdarts_test.py  qdarts_test2.py  qdarts_test_2d.py  qdarts_test_api.py  qdarts_v3.py  qdarts_v3_experiment.py  qdarts_v4.py  qdarts_v4_simple.py  qdarts_v5.py  requirements.txt  run.txt  test_qdarts_env.py
DreamerV3/dreamerv3/: configs.yaml  main.py
DreamerV3/qarray_model/: data.py  model.py  test.py
DreamerV3/qdarts/: capacitance_model.py  experiment.py  experiment_with_barriers.py  model.py  model_with_barriers.py  noise_processes.py  plotting.py  polytope.py  simulator.py  tunneling_simulator.py
RL/: basic_ppo.py  env_config.yaml  environment.py
RL/agent/: __init__.py  ppo_agent.py  sb3_policy.py  sb3_train.py  train.py
RL/policy_testing/: nav_env.py  sb3.py  utils.py
RL/video/: __init__.py  analysis.py  episode_logger.py  example_usage.py  plot_utils.py  renderer.py  video_utils.py
RL_PPo_attempt1/: basic_ppo.py  environment.py
RL_PPo_attempt1/agent/: sb3_train.py
RL_PPo_attempt1/policy_testing/: nav_env.py  sb3.py  sb3_stable.py
RL_PPo_attempt1/video/: example_usage.py  plot_utils.py  video_utils.py
Swarm/: .pre-commit-config.yaml  CapacitancePrediction.py  pyproject.toml  requirements.txt
Swarm/CapacitanceModel/: BayesianUpdater.py  BayesianUpdator.py  CapacitancePrediction.py  README.md  dataloader.py  dataset.py  dataset_generator.py  requirements.txt  test_dataset_simple.py  train_capacitance_model.py
Swarm/Environment/: __init__.py  dataset_loader.py  env.py  env_config.yaml  (+8 more)
voltage_agent_testing/: main.py  policy.py  policy_old.py  policy_v0.py  policy_v1.py  ppo_recurrent.py  sb3_lstm.py  testing.py
(+132 files in other folders)
